// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seetings can render data 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay2);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay2"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-grid pf-m-gutter content-two-cols"
      >
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="settings-page-left"
            style="background-image: url(/backgroundWelcome.png);"
          >
            <img
              alt="Kube"
              class="settings-page-left__kube"
              src="kube.svg"
            />
          </div>
        </div>
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <form
            class="pf-c-form settings-page-sumamary__form"
            novalidate=""
          >
            <div
              class="pf-l-stack pf-m-gutter settings-page-sumamary"
            >
              <div
                class="pf-l-stack__item final-page-sumamary__item"
              >
                <h1
                  class="pf-c-title pf-m-2xl"
                  data-ouia-component-id="OUIA-Generated-Title-2"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  Settings
                </h1>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="apiaddr"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        API address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr"
                      disabled=""
                      id="apiaddr"
                      type="text"
                      value="192.168.1.2"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="ingressip"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Ingress address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip"
                      disabled=""
                      id="ingress-ip"
                      type="text"
                      value="1.5.22.255"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="domain"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Domain
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="settings-page-input-domain"
                      disabled=""
                      id="domain"
                      type="text"
                      value="my.domain.com"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item pf-m-fill"
              />
              <div
                class="pf-l-stack__item settings-page-sumamary__item__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-danger pf-m-aria-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-danger-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-delete-kubeadmin"
                  type="button"
                >
                  Delete kubeadmin
                </button>
                 
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-edit"
                  type="button"
                >
                  Edit
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Seetings can render data 2`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay2);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay2"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-grid pf-m-gutter content-two-cols"
      >
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="settings-page-left"
            style="background-image: url(/backgroundWelcome.png);"
          >
            <img
              alt="Kube"
              class="settings-page-left__kube"
              src="kube.svg"
            />
          </div>
        </div>
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <form
            class="pf-c-form settings-page-sumamary__form"
            novalidate=""
          >
            <div
              class="pf-l-stack pf-m-gutter settings-page-sumamary"
            >
              <div
                class="pf-l-stack__item final-page-sumamary__item"
              >
                <h1
                  class="pf-c-title pf-m-2xl"
                  data-ouia-component-id="OUIA-Generated-Title-2"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  Settings
                </h1>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="apiaddr"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        API address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 1"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-7"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr-0"
                      type="text"
                      value="192"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 2"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-8"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr-1"
                      type="text"
                      value="168"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 3"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-9"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr-2"
                      type="text"
                      value="1"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 4"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-10"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr-3"
                      type="text"
                      value="2"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="ingressip"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Ingress address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 1"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-11"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip-0"
                      type="text"
                      value="1"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 2"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-12"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip-1"
                      type="text"
                      value="5"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 3"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-13"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip-2"
                      type="text"
                      value="22"
                    />
                    .
                    <input
                      aria-invalid="false"
                      aria-label="IP triplet, position 4"
                      class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__narrow"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-14"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip-3"
                      type="text"
                      value="255"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="domain"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Domain
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="settings-page-input-domain"
                      id="domain"
                      type="text"
                      value="my.domain.com"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item pf-m-fill"
              />
              <div
                class="pf-l-stack__item settings-page-sumamary__item__footer"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-save"
                  type="button"
                >
                  Save
                </button>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-cancel"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Seetings can render data 3`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay2);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay2"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-grid pf-m-gutter content-two-cols"
      >
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="settings-page-left"
            style="background-image: url(/backgroundWelcome.png);"
          >
            <img
              alt="Kube"
              class="settings-page-left__kube"
              src="kube.svg"
            />
          </div>
        </div>
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <form
            class="pf-c-form settings-page-sumamary__form"
            novalidate=""
          >
            <div
              class="pf-l-stack pf-m-gutter settings-page-sumamary"
            >
              <div
                class="pf-l-stack__item final-page-sumamary__item"
              >
                <h1
                  class="pf-c-title pf-m-2xl"
                  data-ouia-component-id="OUIA-Generated-Title-2"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  Settings
                </h1>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="apiaddr"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        API address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-15"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr"
                      disabled=""
                      id="apiaddr"
                      type="text"
                      value="192.168.1.2"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="ingressip"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Ingress address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-16"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip"
                      disabled=""
                      id="ingress-ip"
                      type="text"
                      value="1.5.22.255"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="domain"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Domain
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="settings-page-input-domain"
                      disabled=""
                      id="domain"
                      type="text"
                      value="my.domain.com"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item pf-m-fill"
              />
              <div
                class="pf-l-stack__item settings-page-sumamary__item__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-danger pf-m-aria-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-danger-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-delete-kubeadmin"
                  type="button"
                >
                  Delete kubeadmin
                </button>
                 
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-edit"
                  type="button"
                >
                  Edit
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Seetings can render error 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay1);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay1"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-grid pf-m-gutter content-two-cols"
      >
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="settings-page-left"
            style="background-image: url(/backgroundWelcome.png);"
          >
            <img
              alt="Kube"
              class="settings-page-left__kube"
              src="kube.svg"
            />
          </div>
        </div>
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <form
            class="pf-c-form settings-page-sumamary__form"
            novalidate=""
          >
            <div
              class="pf-l-stack pf-m-gutter settings-page-sumamary"
            >
              <div
                class="pf-l-stack__item final-page-sumamary__item"
              >
                <h1
                  class="pf-c-title pf-m-2xl"
                  data-ouia-component-id="OUIA-Generated-Title-1"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  Settings
                </h1>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="apiaddr"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        API address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="apiaddr"
                      disabled=""
                      id="apiaddr"
                      type="text"
                      value="192.168.7.200"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="ingressip"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Ingress address
                      </span>
                      <span
                        aria-hidden="true"
                        class="pf-c-form__label-required"
                      >
                         
                        *
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="ingress-ip"
                      disabled=""
                      id="ingress-ip"
                      type="text"
                      value="192.168.7.201"
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item summary-page-sumamary__item"
              >
                <div
                  class="pf-c-form__group"
                >
                  <div
                    class="pf-c-form__group-label"
                  >
                    <label
                      class="pf-c-form__label"
                      for="domain"
                    >
                      <span
                        class="pf-c-form__label-text"
                      >
                        Domain
                      </span>
                    </label>
                     
                  </div>
                  <div
                    class="pf-c-form__group-control"
                  >
                    <input
                      aria-invalid="false"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="settings-page-input-domain"
                      disabled=""
                      id="domain"
                      type="text"
                      value=""
                    />
                    
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item pf-m-fill summary-page-sumamary__item"
              >
                <div
                  aria-label="Danger Alert"
                  class="pf-c-alert pf-m-inline pf-m-danger"
                  data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                  data-ouia-component-type="PF4/Alert"
                  data-ouia-safe="true"
                  data-testid="settings-page-alert-error"
                >
                  <div
                    class="pf-c-alert__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </div>
                  <h4
                    class="pf-c-alert__title"
                  >
                    <span
                      class="pf-u-screen-reader"
                    >
                      Danger alert:
                    </span>
                    Connection failed
                  </h4>
                  <div
                    class="pf-c-alert__description"
                  >
                    My error to test
                  </div>
                </div>
              </div>
              <div
                class="pf-l-stack__item settings-page-sumamary__item__footer"
              >
                <button
                  aria-disabled="true"
                  class="pf-c-button pf-m-danger pf-m-aria-disabled"
                  data-ouia-component-id="OUIA-Generated-Button-danger-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-delete-kubeadmin"
                  type="button"
                >
                  Delete kubeadmin
                </button>
                 
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="settings-page-button-edit"
                  type="button"
                >
                  Edit
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Seetings can render loading state 1`] = `
<div>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/background.png); --pf-c-background-image--BackgroundImage-2x: url(/background.png); --pf-c-background-image--BackgroundImage--sm: url(/background.png); --pf-c-background-image--BackgroundImage--sm-2x: url(/background.png); --pf-c-background-image--BackgroundImage--lg: url(/background.png); --pf-c-background-image--Filter: url(#patternfly-background-image-filter-overlay0);"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    >
      <filter
        id="patternfly-background-image-filter-overlay0"
      >
        <fecolormatrix
          type="matrix"
          values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
        />
        <fecomponenttransfer
          color-interpolation-filters="sRGB"
          result="duotone"
        >
          <fefuncr
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncg
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefuncb
            tableValues="0.086274509803922 0.43921568627451"
            type="table"
          />
          <fefunca
            tableValues="0 1"
            type="table"
          />
        </fecomponenttransfer>
      </filter>
    </svg>
  </div>
  <header
    class="pf-c-page__header page-header"
  >
    <div
      class="pf-c-page__header-brand"
    >
      <a
        class="pf-c-page__header-brand-link"
      >
        <img
          alt="Logo"
          src="RedHatLogo.svg"
        />
      </a>
    </div>
    <div
      class="pf-c-page__header-nav"
    >
      <div
        class="page-header-middle"
      >
        Edge cluster setup
      </div>
    </div>
    <div
      class="pf-c-page__header-tools"
    >
      <a
        aria-disabled="false"
        class="pf-c-button pf-m-tertiary"
        data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
      >
        Log out
      </a>
    </div>
  </header>
  <div
    class="page-container"
  >
    <div
      class="page-content"
    >
      <div
        class="pf-l-grid pf-m-gutter content-two-cols"
      >
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="settings-page-left"
            style="background-image: url(/backgroundWelcome.png);"
          >
            <img
              alt="Kube"
              class="settings-page-left__kube"
              src="kube.svg"
            />
          </div>
        </div>
        <div
          class="pf-l-grid__item pf-m-6-col"
        >
          <div
            class="pf-l-stack"
          >
            <div
              class="pf-l-stack__item"
            >
              <svg
                aria-valuetext="Loading..."
                class="pf-c-spinner pf-m-xl"
                role="progressbar"
                viewBox="0 0 100 100"
              >
                <circle
                  class="pf-c-spinner__path"
                  cx="50"
                  cy="50"
                  fill="none"
                  r="45"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
